--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "^3.0.0-alpha.7",
+    "@auth0/angular-jwt": "^3.0.1",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic-tools/emoji-picker": "^1.4.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
     "ionic-angular": "^3.9.9",
     "ionicons": "3.0.0",
+    "jwt-decode": "^2.2.0",
     "ng-socket-io": "^0.2.4",
     "pusher": "^3.0.0",
     "rxjs": "5.5.11",
