--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "^3.0.0-alpha.7",
     "@auth0/angular-jwt": "^3.0.1",
+    "@ionic-native/camera": "^5.20.0",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic-tools/emoji-picker": "^1.4.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
     "ionic-angular": "^3.9.9",
     "ionicons": "3.0.0",
     "jwt-decode": "^2.2.0",
@@ -57,7 +59,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
