--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "^3.0.0-alpha.7",
     "@auth0/angular-jwt": "^3.0.1",
-    "@ionic-native/camera": "^5.20.0",
+    "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
@@ -29,6 +29,7 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "^4.1.0",
+    "dateformat": "^3.0.3",
     "ionic-angular": "^3.9.9",
     "ionicons": "3.0.0",
     "jwt-decode": "^2.2.0",
