--- a/package.json
+++ b/package.json
@@ -1,72 +1,83 @@
 {
-  "name": "MobileApp1",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "start": "ionic-app-scripts serve",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
-  },
-  "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@angular/router": "^3.0.0-alpha.7",
-    "@auth0/angular-jwt": "^3.0.1",
-    "@ionic-native/camera": "^4.20.0",
-    "@ionic-native/core": "4.20.0",
-    "@ionic-native/splash-screen": "4.20.0",
-    "@ionic-native/status-bar": "4.20.0",
-    "@ionic-tools/emoji-picker": "^1.4.0",
-    "@ionic/storage": "^2.2.0",
-    "cordova-android": "8.1.0",
-    "cordova-plugin-camera": "^4.1.0",
-    "dateformat": "^3.0.3",
-    "ionic-angular": "^3.9.9",
-    "ionicons": "3.0.0",
-    "jwt-decode": "^2.2.0",
-    "ng-socket-io": "^0.2.4",
-    "pusher": "^3.0.0",
-    "rxjs": "5.5.11",
-    "socket.io": "^2.3.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "typescript": "2.6.2"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+    "name": "MobileApp1",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "start": "ionic-app-scripts serve",
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "dependencies": {
+        "@angular/animations": "5.2.11",
+        "@angular/common": "5.2.11",
+        "@angular/compiler": "5.2.11",
+        "@angular/compiler-cli": "5.2.11",
+        "@angular/core": "5.2.11",
+        "@angular/forms": "5.2.11",
+        "@angular/platform-browser": "5.2.11",
+        "@angular/platform-browser-dynamic": "5.2.11",
+        "@angular/router": "^3.0.0-alpha.7",
+        "@auth0/angular-jwt": "^3.0.1",
+        "@ionic-native/camera": "^4.20.0",
+        "@ionic-native/core": "4.20.0",
+        "@ionic-native/geolocation": "^5.20.0",
+        "@ionic-native/native-geocoder": "^5.20.0",
+        "@ionic-native/photo-viewer": "^5.20.0",
+        "@ionic-native/splash-screen": "4.20.0",
+        "@ionic-native/status-bar": "4.20.0",
+        "@ionic-tools/emoji-picker": "^1.4.0",
+        "@ionic/storage": "^2.2.0",
+        "com-sarriaroman-photoviewer": "^1.1.18",
+        "cordova": "^9.0.0",
+        "cordova-android": "8.1.0",
+        "cordova-plugin-camera": "^4.1.0",
+        "cordova-plugin-geolocation": "^4.0.2",
+        "cordova-plugin-nativegeocoder": "^3.2.2",
+        "dateformat": "^3.0.3",
+        "ionic-angular": "^3.9.9",
+        "ionic-img-viewer": "^2.9.0",
+        "ionicons": "3.0.0",
+        "jwt-decode": "^2.2.0",
+        "ng-socket-io": "^0.2.4",
+        "pusher": "^3.0.0",
+        "rxjs": "5.5.11",
+        "socket.io": "^2.3.0",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.29"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.2.4",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^4.1.3",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "typescript": "2.6.2"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {
+                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+            },
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-camera": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            },
+            "com-sarriaroman-photoviewer": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-nativegeocoder": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
