--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "jwt-decode": "^2.2.0",
         "ng-socket-io": "^0.2.4",
         "pusher": "^3.0.0",
+        "pusher-js": "^5.0.3",
         "rxjs": "5.5.11",
         "socket.io": "^2.3.0",
         "sw-toolbox": "3.6.0",
