--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lint": "ionic-app-scripts lint"
     },
     "dependencies": {
-        "@angular/animations": "5.2.11",
+        "@agm/core": "^1.1.0",
+        "@angular/animations": "^5.2.11",
         "@angular/common": "5.2.11",
         "@angular/compiler": "5.2.11",
         "@angular/compiler-cli": "5.2.11",
@@ -23,22 +24,39 @@
         "@auth0/angular-jwt": "^3.0.1",
         "@ionic-native/camera": "^4.20.0",
         "@ionic-native/core": "4.20.0",
-        "@ionic-native/geolocation": "^5.20.0",
+        "@ionic-native/date-picker": "^4.20.0",
+        "@ionic-native/geolocation": "^4.20.0",
+        "@ionic-native/local-notifications": "^4.20.0",
         "@ionic-native/native-geocoder": "^5.20.0",
-        "@ionic-native/photo-viewer": "^5.20.0",
+        "@ionic-native/network": "^4.20.0",
+        "@ionic-native/photo-viewer": "^4.20.0",
         "@ionic-native/splash-screen": "4.20.0",
         "@ionic-native/status-bar": "4.20.0",
         "@ionic-tools/emoji-picker": "^1.4.0",
+        "@ionic/angular": "^5.0.0",
         "@ionic/storage": "^2.2.0",
+        "@types/hammerjs": "^2.0.36",
         "com-sarriaroman-photoviewer": "^1.1.18",
         "cordova": "^9.0.0",
         "cordova-android": "8.1.0",
+        "cordova-plugin-badge": "^0.8.8",
         "cordova-plugin-camera": "^4.1.0",
+        "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-geolocation": "^4.0.2",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-nativegeocoder": "^3.2.2",
+        "cordova-plugin-network-information": "^2.0.2",
+        "crypto-js": "^4.0.0",
         "dateformat": "^3.0.3",
+        "hammerjs": "^2.0.8",
+        "ion-bottom-drawer": "^2.0.0",
+        "ion-bottom-nav-drawer": "^1.0.3",
         "ionic-angular": "^3.9.9",
+        "ionic-emoji-picker": "^0.1.8",
         "ionic-img-viewer": "^2.9.0",
+        "ionic-pullup": "^4.0.0-beta.3",
+        "ionic-swipe-all": "^2.0.0",
+        "ionic2-google-places-autocomplete": "^1.0.2",
         "ionicons": "3.0.0",
         "jwt-decode": "^2.2.0",
         "ng-socket-io": "^0.2.4",
@@ -51,6 +69,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.2.4",
+        "@types/googlemaps": "^3.39.2",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.1.3",
@@ -75,7 +94,10 @@
             },
             "com-sarriaroman-photoviewer": {},
             "cordova-plugin-geolocation": {},
-            "cordova-plugin-nativegeocoder": {}
+            "cordova-plugin-nativegeocoder": {},
+            "cordova-plugin-local-notification": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-datepicker": {}
         },
         "platforms": [
             "android"
