--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
         "@angular/platform-browser-dynamic": "5.2.11",
         "@angular/router": "^3.0.0-alpha.7",
         "@auth0/angular-jwt": "^3.0.1",
+        "@ionic-native/android-fingerprint-auth": "^4.20.0",
         "@ionic-native/camera": "^4.20.0",
         "@ionic-native/core": "4.20.0",
         "@ionic-native/date-picker": "^4.20.0",
+        "@ionic-native/fingerprint-aio": "^4.20.0",
+        "@ionic-native/full-screen-image": "^5.21.5",
         "@ionic-native/geolocation": "^4.20.0",
         "@ionic-native/local-notifications": "^4.20.0",
         "@ionic-native/native-geocoder": "^5.20.0",
@@ -39,21 +42,25 @@
         "com-sarriaroman-photoviewer": "^1.1.18",
         "cordova": "^9.0.0",
         "cordova-android": "8.1.0",
+        "cordova-plugin-android-fingerprint-auth": "^1.5.0",
         "cordova-plugin-badge": "^0.8.8",
         "cordova-plugin-camera": "^4.1.0",
         "cordova-plugin-datepicker": "^0.9.3",
+        "cordova-plugin-fingerprint-aio": "^3.0.1",
         "cordova-plugin-geolocation": "^4.0.2",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-nativegeocoder": "^3.2.2",
         "cordova-plugin-network-information": "^2.0.2",
         "crypto-js": "^4.0.0",
         "dateformat": "^3.0.3",
+        "es.keensoft.fullscreenimage": "^0.2.10",
         "hammerjs": "^2.0.8",
         "ion-bottom-drawer": "^2.0.0",
         "ion-bottom-nav-drawer": "^1.0.3",
         "ionic-angular": "^3.9.9",
         "ionic-emoji-picker": "^0.1.8",
         "ionic-img-viewer": "^2.9.0",
+        "ionic-long-press": "^2.0.3",
         "ionic-pullup": "^4.0.0-beta.3",
         "ionic-swipe-all": "^2.0.0",
         "ionic2-google-places-autocomplete": "^1.0.2",
@@ -65,6 +72,7 @@
         "rxjs": "5.5.11",
         "socket.io": "^2.3.0",
         "sw-toolbox": "3.6.0",
+        "time-ago-pipe": "^1.3.2",
         "zone.js": "0.8.29"
     },
     "devDependencies": {
@@ -97,7 +105,10 @@
             "cordova-plugin-nativegeocoder": {},
             "cordova-plugin-local-notification": {},
             "cordova-plugin-network-information": {},
-            "cordova-plugin-datepicker": {}
+            "cordova-plugin-datepicker": {},
+            "cordova-plugin-android-fingerprint-auth": {},
+            "cordova-plugin-fingerprint-aio": {},
+            "es.keensoft.fullscreenimage": {}
         },
         "platforms": [
             "android"
