--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
         "@ionic-native/geolocation": "^4.20.0",
         "@ionic-native/local-notifications": "^4.20.0",
         "@ionic-native/lottie-splash-screen": "^4.20.0",
-        "@ionic-native/native-geocoder": "^5.20.0",
+        "@ionic-native/native-geocoder": "^4.20.0",
         "@ionic-native/network": "^4.20.0",
         "@ionic-native/photo-viewer": "^4.20.0",
         "@ionic-native/social-sharing": "^4.20.0",
+        "@ionic-native/spinner-dialog": "^4.20.0",
         "@ionic-native/splash-screen": "4.20.0",
         "@ionic-native/status-bar": "4.20.0",
         "@ionic-tools/emoji-picker": "^1.4.0",
@@ -56,6 +57,7 @@
         "cordova-plugin-fingerprint-aio": "^3.0.1",
         "cordova-plugin-geolocation": "^4.0.2",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
+        "cordova-plugin-native-spinner": "^1.1.3",
         "cordova-plugin-nativegeocoder": "^3.2.2",
         "cordova-plugin-network-information": "^2.0.2",
         "cordova-plugin-x-socialsharing": "^5.6.4",
@@ -75,6 +77,7 @@
         "ionic2-google-places-autocomplete": "^1.0.2",
         "ionicons": "3.0.0",
         "jwt-decode": "^2.2.0",
+        "leaflet": "^1.6.0",
         "ng-socket-io": "^0.2.4",
         "pusher": "^3.0.0",
         "pusher-js": "^5.0.3",
@@ -124,7 +127,8 @@
             "cordova-plugin-x-socialsharing": {
                 "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
             },
-            "cordova-plugin-filechooser": {}
+            "cordova-plugin-filechooser": {},
+            "cordova-plugin-native-spinner": {}
         },
         "platforms": [
             "android"
